--- a/css/app.css
+++ b/css/app.css
@@ -288,6 +288,22 @@ img{
     text-align: center;
 }
 
+/*Página nosotros*/
+
+.contenido-nosotros{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-columns: repeat(auto-fit, minmax (25rem, 1fr));
+    column-gap: 4rem;
+}
+
+.info-nosotros{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
 
 
 
