--- a/css/app.css
+++ b/css/app.css
@@ -57,6 +57,7 @@ img{
     font-weight: 900;
     padding: 1rem;
     transition: background-color 0.9s ease-out;
+    text-align: center;
 }
 
 .boton:hover{
@@ -68,6 +69,10 @@ img{
 
 .text-center{
     text-align: center;
+}
+
+.max-width-30{
+    max-width: 30rem;
 }
 
 /**Header y navegacion**/
@@ -303,6 +308,40 @@ img{
     justify-content: center;
 
 }
+
+/*Página blog*/
+
+.contenedor-blog{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    
+}
+
+
+.entrada,
+.entrada-blog-b{
+    background-color: #F2F2F2;
+    padding: 5rem;
+    margin: 2rem;
+    border-radius: 0.8rem;
+    border-bottom: 10px solid #8B63F8;
+}
+
+.entrada-meta{
+    display: flex;
+    justify-content: space-between;
+}
+
+.entrada-meta p{
+    font-weight: 900;
+}
+
+.entrada-meta span{
+    font-style:italic;
+    color:#5E27F5
+}
+
+
 
 
 
