creacion del archivo entrada.html y actualizacion del css

--- a/css/app.css
+++ b/css/app.css
@@ -341,6 +341,12 @@ img{
     color:#5E27F5
 }
 
+/*Pagina contenido entrada*/
+.contenido-entrada-blog{
+    width: 80rem;
+    margin: 0 auto;
+    background-color: #fff;
+}
 
 
 
