--- a/css/app.css
+++ b/css/app.css
@@ -348,6 +348,24 @@ img{
     background-color: #fff;
 }
 
+/*pagina galería*/
+
+.galeria{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+
+}
+
+.galeria img{
+    height: 40rem;
+    width: 40rem;
+    object-fit: cover;
+}
+
 
 
 
