--- a/css/app.css
+++ b/css/app.css
@@ -19,7 +19,7 @@ body{
 
 h1, h2, h3 {
     font-family: "Playfair Display SC", serif;
-    margin: 0 0 5rem 0;
+    margin: 0 0 2rem 0;
 }
 
 h1{
@@ -197,14 +197,16 @@ img{
 .sobre-nosotros{ /*funcion para hacer un degradado*/
     /*background-image: linear-gradient(to right, black 50%, red 100%);*/
     background-image: linear-gradient(to bottom, transparent 50%, #8B63F8 50%, #5E27F5 100% ), url(../img/nosotros.jpg);
-    background-position: left center;
+    background-position: center, top left;
     background-repeat: no-repeat;
-    background-size: 100%, 110rem;
+    background-size: 100%, 70rem;
 }
 @media (min-width: 760px){
     .sobre-nosotros{ /*funcion para hacer un degradado*/
         /*background-image: linear-gradient(to right, black 50%, red 100%);*/
         background-image: linear-gradient(to right, transparent 50%, #8B63F8 50%, #5E27F5 100% ), url(../img/nosotros.jpg);
+        background-position:left center;
+        background-size: 100%, 90rem;
     } 
 }
 
@@ -244,59 +246,73 @@ img{
     
 }
 /**Seccion nuestros productos**/
-.listado-productos{
-    display: grid;
-    grid-template-columns: repeat(6,  1fr);
-    column-gap: 2rem;
-    row-gap: 2rem;
+
+@media (min-width: 768px){
+    .listado-productos{
+        display: grid;
+        grid-template-columns: repeat(6,  1fr);
+        column-gap: 2rem;
+        row-gap: 2rem;
+    }
+
+    .producto:nth-child(1){
+        grid-column-start: 1;
+        grid-column-end: 7;
+        display:grid;
+        grid-template-columns: 3fr 1fr;
+        
+    }
+
+    .producto:nth-child(1) img{
+        height: 43rem;
+        width: 100%;
+        object-fit: cover; /*con object-fit mantenemos nuestra img dentro sin revasar las medidas*/
+    }
+
+    .producto:nth-child(2){
+        grid-column-start: 1;
+        grid-column-end: 4;
+    }
+
+    .producto:nth-child(2) img,
+    .producto:nth-child(3) img{
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .producto:nth-child(3){
+        grid-column-start: 4;
+        grid-column-end: 7;
+    }
+
+    .producto:nth-child(4){
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+    .producto:nth-child(5){
+        grid-column-start: 3;
+        grid-column-end: 5;
+    }
+    .producto:nth-child(6){
+        grid-column-start: 5;
+        grid-column-end: 7;
+    }
 }
 
-.producto:nth-child(1){
-    grid-column-start: 1;
-    grid-column-end: 7;
-    display:grid;
-    grid-template-columns: 3fr 1fr;
-    
-}
-
-.producto:nth-child(1) img{
-    height: 43rem;
-    width: 100%;
-    object-fit: cover; /*con object-fit mantenemos nuestra img dentro sin revasar las medidas*/
-}
-
-.producto:nth-child(2){
-    grid-column-start: 1;
-    grid-column-end: 4;
-}
-
-.producto:nth-child(2) img,
-.producto:nth-child(3) img{
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
-}
-
-.producto:nth-child(3){
-    grid-column-start: 4;
-    grid-column-end: 7;
-}
-
-.producto:nth-child(4){
-    grid-column-start: 1;
-    grid-column-end: 3;
-}
-.producto:nth-child(5){
-    grid-column-start: 3;
-    grid-column-end: 5;
-}
-.producto:nth-child(6){
-    grid-column-start: 5;
-    grid-column-end: 7;
-}
 .producto{
     background-color: #8B63F8;
+    margin-bottom: 2rem;
+}
 
+@media (min-width: 768px){
+      .producto{
+        margin-bottom: 0;
+      }
+}
+
+.producto:last-of-type{
+    margin-bottom: 0;
 }
 
 .texto-producto{
@@ -331,19 +347,16 @@ img{
     margin-bottom: .5rem;
     padding-left: 8rem;
 }
-
-.footer-grid{
-    display: grid;
-    grid-template-columns:repeat(3, 1fr);
-
-    
-
+@media (min-width: 768px){
+    .footer-grid{
+        display: grid;
+        grid-template-columns:repeat(3, 1fr);
+    }
 }
 
 .menu-footer a{
     display: block;
     padding-left: 8rem;
-
 }
 
 .copyright{
