actualizacion css galeria y contacto

--- a/css/app.css
+++ b/css/app.css
@@ -77,11 +77,18 @@ img{
     transition: background-color 0.9s ease-out;
     text-align: center;
     border: none;
+    width: 100%;
 }
 
 .boton:hover{
     background-color: #769c02;
     cursor: pointer;
+}
+
+@media (min-width: 768px){
+      .boton{
+        width:auto;
+      }
 }
 
 
@@ -433,9 +440,15 @@ img{
     padding: 0;
     margin: 0;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
 
+}
+
+@media (min-width: 768px){
+      .galeria{
+        grid-template-columns: repeat(3, 1fr);
+      }
 }
 
 .galeria img{
